<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Drawing is fun</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="brushSizeDialogTitle">Brush size:</string>
    <string name="eraserSizeDialogTitle">Eraser size:</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="newDrawing">New drawing</string>
    <string name="startNewDrawingConfirmationMessage">Start new drawing (you will lose the current drawing)?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="saveDrawing">Save drawing</string>
    <string name="saveDrawingComfirmationMessage">Save drawing to device Gallery?</string>
    <string name="failedToSave">Failed to save drawing</string>
    <string name="drawingSaved">Drawing saved</string>
    <string name="fileExtension">.png</string>
    <string name="fileDecription">drawing</string>
</resources>
